# zmq_middleware_demo

./: .clang-format  CMakeLists.txt  cmake_build.ps1  cmake_configure.ps1  systray_logo.xcf
client_app/: Application.xcf  CMakeLists.txt  application.qrc  client_app.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translation.ts
test_systray/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  test_systray.cpp  test_systray.pro  translation.ts
